fix issue with edit source modal not fitting inside the window

--- a/style/structure.less
+++ b/style/structure.less
@@ -158,7 +158,8 @@
   left: 20px;
   margin-left: 0;
   height: 93%;
-  top: 20px;
+
+  &.fade.in { top: 20px;}
 
   .modal-body {
     max-height: none;
